<resources>
    <string name="app_name">Librarian</string>
    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Password_again">Password Again</string>
    <string name="the_librarian">The Librarian</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Sign In With Google</string>
    <string name="required_error">Required</string>
    <string name="signin_fail">Sign In Failed</string>
    <string name="signup_fail">Sign Up Failed</string>

</resources>
