<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.swproject.librarian.LoginActivity"
    android:background="@drawable/login_back">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_librarian"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/email_wrapp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:fontFamily="@font/american_typewriter"/>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/email_wrapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/title"
        android:layout_alignRight="@id/title"
        android:layout_above="@+id/password_wrapp"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/american_typewriter"
            android:textStyle="bold"
            android:drawableLeft="@drawable/user"
            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/password_wrapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/title"
        android:layout_alignRight="@id/title"
        android:layout_above="@+id/sign_in"
        android:layout_marginBottom="15dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:fontFamily="@font/american_typewriter"
            android:textStyle="bold" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_wrapp"
        android:layout_alignLeft="@+id/password_wrapp"
        android:background="@drawable/roundedbutton_blue"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:fontFamily="@font/american_typewriter"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:alpha=".7"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_wrapp"
        android:layout_alignLeft="@+id/password_wrapp"
        android:background="@drawable/roundedbutton_green"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:fontFamily="@font/american_typewriter"
        android:textStyle="bold"
        android:layout_below="@+id/sign_in"
        android:alpha=".7"/>

    <Button
        android:id="@+id/google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_wrapp"
        android:layout_alignLeft="@+id/password_wrapp"
        android:background="@drawable/roundedbutton_orange"
        android:layout_marginTop="15dp"
        android:text="@string/google"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:fontFamily="@font/american_typewriter"
        android:textStyle="bold"
        android:layout_below="@+id/sign_up"
        android:alpha=".7"
        android:drawableLeft="@drawable/google"
        android:paddingLeft="10dp"/>

</RelativeLayout>
